# xdecom

./: .gitignore  README.md  setup.cfg
tools/: hexify.py
xdecom/: main.py  offsets.py  utils.py
xdecom/structures/: facilitydata.py  researchdata.py  strtab.py
