[metadata]
name = xdecom
version = 1.0.0
description = XdeCom
long_description = file: README.md
long_description_content_type = text/markdown
author = Natalie Fearnley
author_email = nfearnley@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = games, xcom
project_urls =
    Source=https://github.com/nfearnley/xdecom
    Tracker=https://github.com/nfearnley/xdecom/issues

[options]
packages = find:
python_requires = >=3.8
zip_safe = yes

[options.extras_require]
dev =
    autopep8==1.5.5
    flake8==3.8.4

[options.entry_points]
console_scripts =
    xdecom=xdecom.__main__:main

[flake8]
ignore = E501
per-file-ignores =
    */__init__.py:F401,F403
